--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>DVD Logo Animation</title>
   <style>
-  body{
-    margin:0;
-    padding:0
-  }
-  html{
-    margin:0
-  }
+    * {
+      margin: 0;
+      padding: 0
+    }
+
+    *::-webkit-scrollbar {
+      width: 0 !important
+    }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
   <script src="sketch.js"></script>
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
