--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
   <script src="sketch.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142979168-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', '{{ site.google_analytics }}');
+  </script>
 </head>
 
 <body>
