--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:image" content="https://repository-images.githubusercontent.com/177501688/87e60400-944a-11e9-88d4-cc7c35bdd34a" />
+  <script src="https://imlolman.github.io/js/controller.js"></script>
   <title>DVD Logo Animation</title>
   <style>
     * {
